2014-07-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/multiarch/strcasecmp_l-power7.S:
	[weak_alias]: Fix compiler warning due trailing data.
	* sysdeps/powerpc/powerpc32/power4/multiarch/strcasecmp-power7.S:
	[weak_alias]: Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strcat-power7.c: Fix compile
	warnigs due missing definition of __strcpy_power7 and __strlen_power7.

	* sysdeps/powerpc/powerpc32/power4/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Add memmove functions.

2014-07-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/memcpy.S: Align VSX copies to 16B
	to avoid alignment traps in non-cacheable memory.
	* sysdeps/powerpc/powerpc32/power7/memcpy.S: Likewise.

	* sysdeps/powerpc/powerpc32/power4/multiarch/Makefile: Add memmove
	multiarch objects.
	* sysdeps/powerpc/powerpc32/power4/multiarch/memmove-power7.c: New
	file: multiarch power7 memmove.
	* sysdeps/powerpc/powerpc32/power4/multiarch/memmove-ppc.c: New file:
	multiarch default memmove.
	* sysdeps/powerpc/powerpc32/power4/multiarch/memmove.c: New file:
	multiarch memove for powerpc32/power4.

	* string/bcopy.c: Use full path to include memmove.c.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add memmove and bcopy
	multiarch objects.
	* sysdeps/powerpc/powerpc64/multiarch/bcopy-ppc64.c: New file: default
	bcopy for powerpc64.
	* sysdeps/powerpc/powerpc64/multiarch/bcopy.c: New file: multiarch
	bcopy for powerpc64.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c: Add bcopy
	and memmove implementations.
	* sysdeps/powerpc/powerpc64/multiarch/memmove-power7.S: New file:
	optimized multiarch memmove for POWER7/powerpc64.
	* sysdeps/powerpc/powerpc64/multiarch/memmove-ppc64.c: New file:
	default multiarch memmove for powerpc64.
	* sysdeps/powerpc/powerpc64/multiarch/memmove.c: New file: memmove
	multiarch for powerpc64.
	* sysdeps/powerpc/powerpc64/power7/bcopy.c: New file: optimized bcopy